# Bank-System

./: README.md  SequenceDiagram.drawio
Client/: CMakeLists.txt  accountcontroller.cpp  accountcontroller.h  admininterface.cpp  admininterface.h  admininterface.ui  agetaccountnumwindow.cpp  agetaccountnumwindow.h  agetaccountnumwindow.ui  client.cpp  client.h  clientrequesthandleer.cpp  createuserwindow.cpp  createuserwindow.h  createuserwindow.ui  deleteuserwindow.cpp  deleteuserwindow.h  deleteuserwindow.ui  getaccbalance.cpp  getaccbalance.h  getaccbalance.ui  getaccnumwindow.cpp  getaccnumwindow.h  getaccnumwindow.ui  inputvalidator.cpp  inputvalidator.h  iuser.cpp  iuser.h  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  maketransaction.cpp  maketransaction.h  maketransaction.ui  maketransfer.cpp  maketransfer.h  (+26 more)
Server/: CMakeLists.txt  CMakeLists.txt.user.ae47847  clienthandler.cpp  clienthandler.h  datebasehandler.cpp  datebasehandler.h  main.cpp  requesthandler.cpp  requesthandler.h  server.cpp  server.h  serverResources.qrc
Server/DataBase/: myDataBase.json
UML Diagrams/: Component Diagram.drawio  Sequence Diagram.drawio
